--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nucleo_g431kb]
+[env:nucleo_l476rg]
 platform = ststm32
-board = nucleo_g431kb
+board = nucleo_l476rg
 framework = arduino
 lib_deps = 
     https://github.com/GavriilFursov/TenzoRS485.git
