--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,7 @@
 [env:nucleo_l476rg]
 platform = ststm32
 board = nucleo_l476rg
+monitor_speed = 115200
 framework = arduino
 lib_deps = 
     https://github.com/GavriilFursov/TenzoRS485.git
